Tue Nov 19 07:09:15 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* bin/auto_run_tests.lst: Tests not runnable in minimum
	  configuration were being run. Hence prevented them from
	  running. 

Mon Nov 18 20:49:33 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* examples/IPC_SAP/FILE_SAP/client.cpp (ACE_TMAIN): Changed to use
	  predefined ACE_DEFAULT_FILE_PERMS instead of the non-portable 0666.

Mon Nov 18 12:27:46 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/Dev_Poll_Reactor.cpp (handler):
	* ace/WFMO_Reactor.i (handler):
	* ace/Select_Reactor_Base_T.cpp (handler_i): The methods that
	  returns a signal handler associated with a certain type of
	  signal, does restrictive sanity checks. One of the checks that
	  it performs is to see whether a pointer to an event_handler is 0
	  just before assigning a new event handler pointer. This check
	  was not required at all and hence it is now removed. Thanks to
	  Edan Ayal for reporting this.

Sat Nov 16 09:38:38 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/*/Makefile:
	* tests/Makefile:
	* examples/*/Makefile:
	* performance-tests/*/Makefile:
	* ACEXML/*/Makefile: Updated dependencies.

Fri Nov 15 20:33:02 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/SOCK_Dgram_Mcast.h:
	* ace/config-all.h: Added new macro for platforms that don't yet
	  implement the new IGMPv3, perfect multicast filtering, and
	  replaced the #ifdef linux in the ACE_SOCK_Dgram_Mcast::ctor
	  with the new macro, since this isn't just a linux thing.

	* ace/config-aix-4.x.h:
	* ace/config-freebsd.h:
	* ace/config-linux-common.h:
	* ace/config-netbsd.h:
	* ace/config-openbsd.h:
	  Defined ACE_LACKS_PERFECT_MULTICAST_FILTERING for these platforms.

	* ace/SOCK_Dgram_Mcast.cpp (open_i): Removed redundant call to
	  ACE_SOCK::set_option() to set SO_REUSEADDR, since it's set in
	  the call to ACE_SOCK::open().  This fixes [bug 1111].
